--- a/1.html
+++ b/1.html
@@ -20,6 +20,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%,-50%);
+            /*通过定位让大盒子居中              */
         }
         img{
             width: 200px;
@@ -29,6 +30,7 @@
             left: 0;
             transition: all 1.5s;
             transform-origin: top right;
+            /* 每张图片都定位，且改变图片默认的旋转中心             */
         }
         
         div:hover img:first-child{
